services_unittests: remove OzonePlatform shutdown and redundant init.

Remove problematic OzonePlatform::Shutdown method.
(per-process gpu init was torn down with per-fixture aura::Env dtor)

Remove redundant run_all_service_tests GPU init of OzonePatform
(done as needed via WindowServiceTestSetup / GLSurfaceTestSupport)
Remove obsolete WindowTreeClientWmOzoneTest aura_unittests fixture.
Add some gl_factory_ozone.cc failure logging.

Bug: 855191
Test: No regressions, no problems running services_unittests, etc.
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: If798b639e626738e3ba6d4c4a550cf3cc02c70ab
Reviewed-on: https://chromium-review.googlesource.com/1144186
Commit-Queue: Michael Wasserman <msw@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Michael Spang <spang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577061}
Former-commit-id: 13115867c7947651db1b67695352af94deb4f2ad